fix spacing and styling

--- a/src/web/src/style.css
+++ b/src/web/src/style.css
@@ -1,8 +1,12 @@
-@import 'flowbite';
+@import "flowbite";
 @import "tailwindcss";
 
 @layer base {
     button {
         @apply cursor-pointer;
+    }
+
+    input[type="checkbox"] {
+        @apply mx-2 border border-gray-300 rounded-sm bg-gray-50 focus:ring-3 focus:ring-blue-300 dark:bg-gray-600 dark:border-gray-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 cursor-pointer;
     }
 }
